# KinectFusionApp

./: CMakeLists.txt  README.md
KinectFusionApp/: CMakeLists.txt
KinectFusionApp/include/: depth_camera.h
KinectFusionApp/src/: depth_camera.cpp  main.cpp
KinectFusionLib/: CMakeLists.txt
KinectFusionLib/include/: data_types.h
KinectFusionLib/src/: kinectfusion.cpp  pose_estimation.cpp
